--- a/package.yaml
+++ b/package.yaml
@@ -38,6 +38,14 @@ dependencies:
 
 library:
   source-dirs: src 
+  ghc-options: 
+  - -fplugin=Polysemy.Plugin
+  - -threaded
+  - -rtsopts
+  - -with-rtsopts=-N
+  - -O2 
+  - -flate-specialise 
+  - -fspecialise-aggressively
 
 executables:
   risky-exe:
@@ -45,9 +53,20 @@ executables:
     source-dirs:         app
     ghc-options: 
     - -fplugin=Polysemy.Plugin
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+    - -O2 
+    - -flate-specialise 
+    - -fspecialise-aggressively
+    default-extensions:
+    - DataKinds
+    - FlexibleContexts
+    - GADTs
+    - LambdaCase
+    - PolyKinds
+    - RankNTypes
+    - ScopedTypeVariables
+    - TypeApplications
+    - TypeOperators
+    - TypeFamilies
 
 tests:
   risky-test:
