made polysemy works with servant

--- a/package.yaml
+++ b/package.yaml
@@ -36,6 +36,8 @@ dependencies:
 - servant-checked-exceptions
 - polysemy
 - polysemy-plugin
+- http-types
+- servant-foreign
 
 library:
   source-dirs: src 
