Update LTS version

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,7 @@
-resolver: lts-14.7
+resolver: lts-16.21
 packages:
 - .
 extra-deps:
 - servant-checked-exceptions-2.1.0.0@sha256:798d86ddf11c9d3089e55994ba9b2b6c21161b5638e29d6530e89b20d24aa89f,3985
 - servant-checked-exceptions-core-2.1.0.0@sha256:52fefda2686455269b5a6f81815b8668621b5e9a0ddf5ea1444be50af7a5f263,3194
-- polysemy-1.2.1.0@sha256:5b8cc3befbd10b8b05354a35dc71d24041c0dad15f28c9301f199b00916b69b6,5776
+- polysemy-plugin-0.2.5.2@sha256:649cea55749c38af841e9f3750ccf65be351e597f3085234e28e3491e78d1f78,3155
